--- a/public/css/register.css
+++ b/public/css/register.css
@@ -18,10 +18,10 @@ max-width: 800px;
   justify-content: space-between;
   display: flex;
   align-items: center;
-  
+
   margin-right:auto ;
 margin-left: auto;
- 
+
 }
 .gloval-nav {
   display: flex;
@@ -49,7 +49,7 @@ opacity: 0.7;
 }
 .title-logo a img {
  width: 100px;
- 
+
 }
 
 
@@ -78,7 +78,7 @@ opacity: 0.7;
 }
 
 .bread {
- 
+
   max-width: 1080px;
   margin: 0 auto;
   font-size: 0.8rem;
@@ -90,7 +90,7 @@ opacity: 0.7;
   max-width: 1080px;
   border-top: 2px solid #BAE8E8;
   margin: 30px auto 0 auto;
-  height: 500px;
+  /* height: 500px; */
   text-align: center;
 }
 .register-title  {
@@ -153,7 +153,7 @@ display: inline-block;
   /* background-color: #E3F6F5; */
   border-top: 1px solid rgb(133, 133, 133);
   padding: 40px 0;
- 
+
 }
 .r-maile-btn input {
   background-color: #272343;
@@ -161,7 +161,7 @@ display: inline-block;
   padding: 10px 100px;
   border-radius: 15px;
   border: 3px solid #272343;
-  
+
 }
 .r-maile-btn input:hover {
   border: 3px solid #272343;
@@ -184,7 +184,7 @@ display: inline-block;
   margin-top: 40px;
   max-width: 1080px;
   max-height: 150px;
- 
+
 /* background-color: #272343; */
 margin-bottom:  60px;
 margin-right:auto ;
@@ -219,8 +219,8 @@ height: 150px;
   font-weight: bold;
   padding: 10px;
   border-radius: 10px;
-  
-  
+
+
 }
 .ad-left-btn:hover {
   background-color: #272343;
@@ -240,7 +240,7 @@ margin: 0 auto;
 }
 
 .cando-items {
- 
+
   display: grid;
   /* grid-template-rows: 50% 50%; */
   grid-template-columns: 49% 49%;
@@ -249,7 +249,7 @@ margin: 0 auto;
 
  /* background-color: #272343; */
  margin-bottom: 50px;
- 
+
 }
 .cando-item {
 
@@ -292,7 +292,7 @@ margin-bottom: 20px;
 }
 .cando-item2 h3,.cando-item3 h3{
   border-bottom: 3px solid #272343;
-} 
+}
 .btn {
   /* background-color: #272343; */
   text-align: center;
@@ -360,7 +360,7 @@ footer {
   /* background-color: antiquewhite; */
   margin: 0 auto;
   padding: 0 40px;
-  
+
 }
 .footer-logo img{
   width: 130px;
@@ -417,15 +417,15 @@ header {
 }
 
 .header-inner {
-  max-width: 700px; 
+  max-width: 700px;
   display: block;
 
   /* background-color: aqua; */
 
-  
+
   margin-right:auto ;
  margin-left: auto;
- 
+
 }
 .gloval-nav {
   max-width: 500px;
@@ -441,7 +441,7 @@ header {
 
 .title-logo a img {
  width: 150px;
- 
+
 }
 
 
@@ -450,7 +450,7 @@ header {
   height: 40px;
   /* background-color: #272343; */
   margin: 0 auto 10px auto;
-  
+
 }
 
 
@@ -490,18 +490,18 @@ height: 100px;
   left: 5%;
   width: 30%;
   height: 10%;
-  
+
 
 }
 
 
 .cando h2 {
- 
+
   font-size: 1.3rem;
 
 }
 .cando-items {
- 
+
 
   grid-template-columns: 50% 50%;
   column-gap: 10px;
@@ -509,7 +509,7 @@ height: 100px;
 
  /* background-color: #272343; */
  margin-bottom: 50px;
- 
+
 }
 .cando-item h3 {
   padding-bottom: 10px;
@@ -525,8 +525,8 @@ height: 100px;
     width: 45%;
     font-size: 0.8rem;
   }
-  
-  
+
+
   .r-user-input,  .r-maile-input,  .r-pass-input {
     /* background-color: #BAE8E8; */
   margin-bottom: 20px;
@@ -581,7 +581,7 @@ margin-left: auto;
   justify-content: center;
   background-color: #fff6c2;
   display: none;
- 
+
 }
 .gloval-nav a {
   font-size: 1rem;
@@ -624,7 +624,7 @@ border:2px solid #272343
 
   display: block;
 
- 
+
 
  /* background-color: #272343; */
  margin-bottom: 50px;
@@ -635,10 +635,10 @@ border:2px solid #272343
   font-size: 1rem;
 }
 .title-logo {
-  
+
   /* background-color: #272343; */
   margin: 0 ;
-  
+
 }
 .ad-left-text {
   font-size: 0.7rem;
@@ -648,14 +648,14 @@ border:2px solid #272343
   line-height: 1rem;
 }
 .ad-left-btn {
- 
+
 
   font-weight: bold;
   padding:3px;
 
   font-size: 0.5rem;
-  
-  
+
+
 }
 .ad-left {
   position: absolute;
@@ -712,7 +712,7 @@ border-radius: 16px;
 }
 
 .cando-items {
- 
+
   display: block;
   /* grid-template-rows: 50% 50%; */
   /* grid-template-columns: 49% 49%;
@@ -721,7 +721,7 @@ border-radius: 16px;
 
  /* background-color: #272343; */
  margin-bottom: 50px;
- 
+
 }
 .cando-item {
   margin-bottom: 30px;
@@ -755,6 +755,6 @@ margin-bottom: 10px;
   color: #fff;
   padding: 10px 70px;
   border-radius: 15px;
-  
+
 }
 }
